--- a/css/styles.css
+++ b/css/styles.css
@@ -142,6 +142,11 @@ li>a * {
     pointer-events: none;
 }
 
+li>a.tappable-active {
+    color: #fff;
+    background-color: #4286f5;
+}
+
 .button {
 	-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
 	-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
@@ -187,4 +192,40 @@ h2 {
     margin:10px;
     width:100px;
     height:100px;
+}
+
+.scroll {
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+    position: absolute;
+    top: 84px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+}
+
+.page {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-transform:translate3d(0,0,0);
+}
+ 
+.stage-center {
+    top: 0;
+    left: 0;
+}
+ 
+.stage-left {
+    left: -100%;
+}
+ 
+.stage-right {
+    left: 100%;
+}
+ 
+.transition {
+    -moz-transition-duration: .375s;
+    -webkit-transition-duration: .375s;
+    -o-transition-duration: .375s;
 }
